Bug 267037. Buttons should delegate child frames to the wrapped block, and tell the style system that legends are always blocks. Fixes a couple of crashes. r+sr=bzbarsky